--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -2,6 +2,10 @@
 	margin-top: 14%;
 	width: 25%;
 	margin-left: 38%;
-	padding: 30px 20px 100px 20px;
+	padding: 30px 20px 90px 20px;
 	border: 1px solid black;
+}
+
+#ojoAbierto,#comprobar{
+	width: 1px;
 }
