--- a/assets/css/indexPage.css
+++ b/assets/css/indexPage.css
@@ -1,25 +1,20 @@
 .jumbotron{
-	margin-bottom: 0;
+	margin-bottom: 0;	
+	height: 150px;
+}
+
+.titulo{
+	margin-top: 0;
 }
 
 .cuenta{
 	margin-right: 50px;
 }
 
-#registro,#login{	
-	margin-top:  13%;
+.navbar{
+	border-radius:0;
 }
 
-.principal{
-	margin-top: 5px;
-	margin-right: 10px;
-	border-radius: 15px;
-	font-size: 10px;
-}
-
-#ojoAbierto,#comprobar{
-	padding: 1%;
-	margin-top: 3.5%;
-	width: 20px;
-	height: 20px;
+#login{
+	margin-top: 13%;
 }
