--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -1,7 +1,22 @@
+.input-group{
+	margin-bottom: 2%;
+}
+
 .registro{
-	margin-top: 14%;
-	width: 25%;
-	margin-left: 38%;
-	padding: 30px 20px 100px 20px;
+	margin-top: 2%
+	width: 29%;
+	margin-left: 36%;
+	padding: 30px 20px 90px 20px;
 	border: 1px solid black;
+}
+
+#nickR, #passwdR{
+	width: 92%;
+}
+
+#ojoAbierto,#comprobar{
+	width: 7%;
+	margin-top: 3%;
+	margin-left: 0.1%;
+
 }
