--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -3,8 +3,8 @@
 }
 
 .registro{
-	margin-top: 2%
-	width: 29%;
+	margin-top: 3%;
+	width: 28%;
 	margin-left: 36%;
 	padding: 30px 20px 90px 20px;
 	border: 1px solid black;
