--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -1,3 +1,7 @@
+.primero{
+	margin-top: 8%;
+}
+
 .input-group{
 	margin-bottom: 2%;
 }
@@ -6,12 +10,12 @@
 	margin-top: 3%;
 	width: 28%;
 	margin-left: 36%;
-	padding: 30px 20px 90px 20px;
+	padding: 30px 20px 60px 20px;
 	border: 1px solid black;
 }
 
-#nickR, #passwdR{
-	width: 92%;
+#ojoAbierto{
+	z-index: 1;
 }
 
 #ojoAbierto,#comprobar{
