--- a/assets/css/permiso.css
+++ b/assets/css/permiso.css
@@ -1,4 +1,20 @@
-#guardarPermiso{
-	width: 4%;
-	height: 2%;
+#botonGuardarPermiso{
+	margin-top: -30%;
+}
+
+.permisosOpciones{
+	width: 47%;
+}
+
+#volverP{
+	margin-right: 2%;
+}
+
+#selectorPermisos{
+	width: 50%;
+	border-radius: 10%;
+}
+
+#selectorPermisos:focus{
+	outline-color: hotpink;
 }
