--- a/assets/css/permiso.css
+++ b/assets/css/permiso.css
@@ -1,8 +1,7 @@
-<<<<<<< HEAD
 #guardarPermiso{
 	width: 1%;
 	height: 1%;
-=======
+}
 #botonGuardarPermiso{
 	margin-top: -30%;
 }
@@ -22,5 +21,4 @@
 
 #selectorPermisos:focus{
 	outline-color: hotpink;
->>>>>>> christian
 }
