--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,14 +3,14 @@
 }
 
 .footer-distributed{
-	background-color: #292c2f;
+	background-color: #FAAC58;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-	padding: 55px 50px;
-	margin-top: 80px;
+	padding: 5px 5px;
+	margin-top: 28.3%;
 }
 
 .footer-distributed .footer-left,
@@ -23,17 +23,15 @@
 /* Footer left */
 
 .footer-distributed .footer-left{
-	width: 40%;
-}
-
-.footer-distributed h3 span{
-	color:  #5383d3;
+	width: 38%;
+	margin-top: 2.5%;
+	margin-left: 1%;
 }
 
 /* Footer links */
 
 .footer-distributed .footer-links{
-	color:  #ffffff;
+	color:  white;
 	margin: 20px 0 12px;
 	padding: 0;
 }
@@ -46,8 +44,8 @@
 }
 
 .footer-distributed .footer-company-name{
-	color:  #8f9296;
-	font-size: 14px;
+	color:  hotpink;
+	font-size: 16px;
 	font-weight: normal;
 	margin: 0;
 }
@@ -60,7 +58,7 @@
 
 .footer-distributed .footer-center i{
 	background-color:  #33383b;
-	color: #ffffff;
+	color: #FE642E;
 	font-size: 25px;
 	width: 38px;
 	height: 38px;
@@ -91,7 +89,7 @@
 }
 
 .footer-distributed .footer-center p a{
-	color:  #5383d3;
+	color:  white;
 	text-decoration: none;;
 }
 
@@ -104,15 +102,15 @@
 
 .footer-distributed .footer-company-about{
 	line-height: 20px;
-	color:  #92999f;
+	color:  white;
 	font-size: 13px;
 	font-weight: normal;
-	margin: 0;
+	margin-top: 0;
 }
 
 .footer-distributed .footer-company-about span{
 	display: block;
-	color:  #ffffff;
+	color:  white;
 	font-size: 14px;
 	font-weight: bold;
 	margin-bottom: 20px;
@@ -131,7 +129,7 @@
 	border-radius: 20px;
 
 	font-size: 20px;
-	color: #ffffff;
+	color: #FE642E;
 	text-align: center;
 	line-height: 35px;
 
